Changes to the source data section of SWAP DMP

--- a/DMP for SWAP SSGCN.ipynb
+++ b/DMP for SWAP SSGCN.ipynb
@@ -112,8 +112,17 @@
    "source": [
     "## Source Data (aka \"Acquire\")\n",
     "\n",
-    "One of the next things we need to do here is look at the substance of the Acquire section of the document where it states things about processing the PDF files from State Wildlife Action Plans in 2005. We can say something about that in text, but the current system has a flaw that we can rectify and then prove out in the notebook. There is currently a fairly hidden folder of all the PDFs that were processed from the 2005 SWAPs that is in the online web app but nowhere else. We should get those files attached to the 2005 items in the ScienceBase SWAP collection so that they are more well managed and then reference them in various ways from there. Ideally, we would also have some information backing up whatever process we went through to extract species names from those files and any decisions we made along the way about what to include or not include in that process. Unfortunately, that is probably ancient history at this point with no reasonable provenance trace, but we can at least make the releva"
+    "One of the next things we need to do here is look at the substance of the Acquire section of the document where it states things about processing the PDF files from State Wildlife Action Plans in 2005. We can say something about that in text, but the current system has a flaw that we can rectify and then prove out in the notebook. There is currently a fairly hidden folder of all the PDFs that were processed from the 2005 SWAPs that is in the online web app but nowhere else. We should get those files attached to the 2005 items in the ScienceBase SWAP collection so that they are more well managed and then reference them in various ways from there. Ideally, we would also have some information backing up whatever process we went through to extract species names from those files and any decisions we made along the way about what to include or not include in that process. Unfortunately, that is probably ancient history at this point with no reasonable provenance trace, but we can at least make the relevant source information readily accessible."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
